--- a/users-svc.yaml
+++ b/users-svc.yaml
@@ -22,7 +22,7 @@ spec:
           image:  shaikkhajaibrahim/libuserssvc:1.0
           env:
             - name: DATABASE_URL
-              value:  postgresql://:@:5432/
+              value:  postgresql://user:password@users-db:@:5432/usersdb
             - name: SECRET_KEY
               value:  YtDEVWnL35aAIP-5yxeLjAZ49R920-mMNDfwPyWULu63HFsYzo0f-LO2InxC8eu428k
           ports:
