--- a/books-svc.yaml
+++ b/books-svc.yaml
@@ -40,7 +40,7 @@ kind: Service
 metadata:
   name: books-svc
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 8000
       targetPort: 8000
